--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul class="nav-links">
                 <li><a href="#our-agency">Our Agency</a></li>
                 <li><a href="#service">Services</a></li>
-                <li><a href="#">Features</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -40,7 +40,7 @@
 
     <!-- ----------- services ----------- -->
 
-    <section class="services">
+    <section class="services" id="service">
         <h2>Services</h2>
         <div class="services-grid">
             <div class="service-item large">
@@ -68,5 +68,85 @@
             </div>
         </div>
     </section>
+
+    <!-- ----------- feathure ----------- -->
+
+    <section class="features" id="features">
+        <div class="wave">
+            <img src="asset/img/wave.svg" alt="wave">
+        </div>
+        <div class="features-content">
+            <h2>Features</h2>
+            <div class="features-grid">
+                <div class="feature-item">
+                    <img src="asset/img/icone.png" alt="Feature Icon 1">
+                    <h3>Feature</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, quasi voluptas. Sunt recusandae delectus non soluta quisquam veritatis vitae odit vel aut autem facere dolores veniam dolorem perspiciatis, illo illum.</p>
+                </div>
+                <div class="feature-item">
+                    <img src="asset/img/bus.png" alt="Feature Icon 2">
+                    <h3>Feature</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, quasi voluptas. Sunt recusandae delectus non soluta quisquam veritatis vitae odit vel aut autem facere dolores veniam dolorem perspiciatis, illo illum.</p>
+                </div>
+                <div class="feature-item">
+                    <img src="asset/img/lit.png" alt="Feature Icon 3">
+                    <h3>Feature</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, quasi voluptas. Sunt recusandae delectus non soluta quisquam veritatis vitae odit vel aut autem facere dolores veniam dolorem perspiciatis, illo illum.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ----------- contact ? ----------- -->
+
+    <section class="cta-section" id="contact">
+        <div class="cta-container">
+            <div class="cta-text">
+                <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, repellendus. Reiciendis quas neque iure dignissimos!</p>
+            </div>
+            <div class="cta-button">
+                <a href="#">Get in touch &gt;</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- ----------- footer ----------- -->
+
+    <footer>
+
+        <div class="footer-top">
+          <div class="logo">
+            <img src="asset/img/Logo-white.png" alt="Travel Together Logo">
+          </div>
+          <ul class="footer-links">
+            <li><a href="#our-agency">Our Agency</a></li>
+            <li><a href="#service">Services</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      
+        <hr />
+      
+        <div class="footer-bottom">
+          <div class="address">
+            <p>Travel Together</p>
+            <p>36 Avenue De La Somme</p>
+            <p>33700 MÉRIGNAC</p>
+          </div>
+          <div class="contact">
+            <p>contact us</p>
+            <p>06 XX XX XX XX</p>
+            <p>Mail: contact@traveltogether.fr</p>
+          </div>
+          <div class="socials">
+            <a href="#"><img src="asset/img/facebook.png" alt="facebook"></a>
+            <a href="#"><img src="asset/img/youtube.png" alt="youtube"></a>
+            <a href="#"><img src="asset/img/twitter.png" alt="twiter"></a>
+            <a href="#"><img src="asset/img/linkedin.png" alt="linkedin"></a>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
